# HongyuanSR

./: .gitignore  .gitmodules  README.md  StarRail.proto  main.lua  pyproject.toml  start.bat
common/: __init__.py  db.py  res.py  srtools.py  util.py
common/res/: avatarConfigs.json
gameserver/: __main__.py  client.py  connection.py  handler.py  packet.py
gameserver/handlers/: archive.py  avatar.py  battle.py  item.py  lineup.py  player.py  recommend.py  scene.py
sdkserver/: __main__.py
